# crt-old

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  build_in_container.sh  deps.bzl  repo.bzl  repos.bzl
.github/workflows/: create_release.yml  main.yml
antique/cpu/: BUILD.bazel
antique/product/: BUILD.bazel
config/: compiler.bzl  device.bzl  execution.bzl  features.bzl  registration.bzl  repo.bzl
features/: README.md  defs.bzl
features/common/: BUILD.bazel
features/embedded/: BUILD.bazel
features/windows/: BUILD.bazel
rules/: local_archive.bzl  pkg_win.bzl  repo.bzl  run.bzl  transition.bzl
rules/scripts/: BUILD.bazel  platform_runner.template.bash  runner.template.bash
tests/: .bazelrc  BUILD.bazel  README.md  WORKSPACE.bazel
tests/arm/: BUILD.bazel  memmap.ld  notmain.c  vectors.S
tests/lib/: BUILD.bazel  sieve.c  sieve.h
tests/riscv32/: BUILD.bazel  memmap.ld  notmain.c  start.S
tests/windows/: BUILD.bazel  sieve.c
tests/windows/gtest/: BUILD.bazel  trivial_failing_test.cc  trivial_passing_test.cc
toolchains/: BUILD.bazel  BUILD.export_all.bazel
toolchains/cc65/: BUILD.bazel  repository.bzl  repository.bzl.template
toolchains/cc65/wrappers/: BUILD  driver.py  driver.sh  ld
toolchains/gcc_arm_none_eabi/: BUILD.bazel  repos.bzl  repository.bzl
toolchains/gcc_arm_none_eabi/wrappers/: ar  cpp  gcc  gcov  ld  nm  objcopy  objdump  strip
toolchains/gcc_mxe_mingw32/: BUILD.bazel  repository.bzl  repository.bzl.template
toolchains/gcc_mxe_mingw32/wrappers/: driver.sh
toolchains/gcc_mxe_mingw64/: BUILD.bazel  repository.bzl  repository.bzl.template
toolchains/gcc_mxe_mingw64/wrappers/: BUILD  driver.sh
toolchains/lowrisc_rv32imcb/: BUILD.bazel  repository.bzl
toolchains/lowrisc_rv32imcb/wrappers/: BUILD  driver.sh
util/: BUILD.bazel  discover_includes.py  pkg_win.py  release_in_container.sh
