package(default_visibility = ["//visibility:public"])

load("//third_party/github:rules.bzl", "release")

filegroup(
    name = "release-artifacts",
    srcs = [
        "@mxe_src//:mxe-binaries",
        "@qemu_src//:qemu-binaries",
    ],
)

release(
    name = "release",
    artifacts = {
        "@mxe_src//:mxe-binaries": "MXE mingw64 compiler",
        "@qemu_src//:qemu-binaries": "QEMU system emulator",
    },
    env = {
        "BASE_URL": "https://github.com/cfrantz/crt",
    },
    script = """(
        cd "${BUILD_WORKSPACE_DIRECTORY}"
        # Apparently envsubst can't handle bash arrays or dicts.
        SHA256=${DIGEST[mxe-binaries.tar.xz]} envsubst \
                <toolchains/gcc_mxe_mingw64/repository.bzl.template \
                >toolchains/gcc_mxe_mingw64/repository.bzl
        SHA256=${DIGEST[qemu-binaries.tar.xz]} envsubst \
                <third_party/qemu/repos.bzl.template \
                >third_party/qemu/repos.bzl
        git commit -m "Update tags and hashes for ${RELEASE_TAG}" \
                toolchains/gcc_mxe_mingw64/repository.bzl \
                third_party/qemu/repos.bzl
        git tag -f "${RELEASE_TAG}"
        git push ${REMOTE} ${RELEASE_TAG} --follow-tags
    )""",
)
