# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

workspace(name="crt")

load("//:repos.bzl", "crt_repos")
crt_repos()
load("//:deps.bzl", "crt_deps")
crt_deps()

load("//third_party/github:repos.bzl", "github_tools_repos")
github_tools_repos()
load("//third_party/qemu:repos.bzl", "qemu_src_repos")
qemu_src_repos()
load("//third_party/mxe:repos.bzl", "mxe_src_repos")
mxe_src_repos()
