# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

package(default_visibility = ["//visibility:public"])

constraint_setting(name = "product")

constraint_value(
    name = "nes",
    constraint_setting = ":product",
)
