load("//config:compiler.bzl", "setup")
load("//platforms/arm:devices.bzl", "DEVICES")

package(default_visibility = ["//visibility:public"])

SYSTEM_INCLUDE_PATHS = [
    "external/gcc_arm_none_eabi_files/arm-none-eabi/include",
    "external/gcc_arm_none_eabi_files/arm-none-eabi/include/c++/10.3.1",
    "external/gcc_arm_none_eabi_files/arm-none-eabi/include/c++/10.3.1/arm-none-eabi",
    "external/gcc_arm_none_eabi_files/arm-none-eabi/include/c++/10.3.1/backward",
    "external/gcc_arm_none_eabi_files/arm-none-eabi/include/newlib-nano",
    "external/gcc_arm_none_eabi_files/lib/gcc/arm-none-eabi/10.3.1/include",
    "external/gcc_arm_none_eabi_files/lib/gcc/arm-none-eabi/10.3.1/include-fixed",
]

filegroup(
    name = "compiler_components",
    srcs = [
        "//toolchains/gcc_arm_none_eabi/wrappers:all",
        "@gcc_arm_none_eabi_files//:all",
    ],
)

[setup(
    name = device.name,
    architecture = device.architecture,
    artifact_naming = device.artifact_naming,
    compiler_components = ":compiler_components",
    constraints = device.constraints,
    feature_set = device.feature_set,
    include_directories = SYSTEM_INCLUDE_PATHS,
    params = {
        "compiler": "gcc",
    },
    substitutions = device.substitutions,
    tools = {
        "ar": "wrappers/ar",
        "cpp": "wrappers/cpp",
        "gcc": "wrappers/gcc",
        "gcov": "wrappers/gcov",
        "ld": "wrappers/ld",
        "nm": "wrappers/nm",
        "objcopy": "wrappers/objcopy",
        "objdump": "wrappers/objdump",
        "strip": "wrappers/strip",
    },
) for device in DEVICES]
