# Copyright lowRISC contributors.
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

load("//config:compiler.bzl", "setup")
load("//platforms/x86_64:windows.bzl", "DEVICES")

package(default_visibility = ["//visibility:public"])

SYSTEM_INCLUDE_PATHS = [
    "external/gcc_mxe_mingw64_files/lib/gcc/x86_64-w64-mingw32.shared/11.3.0/include",
    "external/gcc_mxe_mingw64_files/lib/gcc/x86_64-w64-mingw32.shared/11.3.0/include-fixed",
    "external/gcc_mxe_mingw64_files/lib/gcc/x86_64-w64-mingw32.shared/11.3.0/include/c++",
    "external/gcc_mxe_mingw64_files/lib/gcc/x86_64-w64-mingw32.shared/11.3.0/include/c++/backward",
    "external/gcc_mxe_mingw64_files/lib/gcc/x86_64-w64-mingw32.shared/11.3.0/include/c++/x86_64-w64-mingw32.shared",
    "external/gcc_mxe_mingw64_files/x86_64-w64-mingw32.shared/include",
]

filegroup(
    name = "compiler_components",
    srcs = [
        "//toolchains/gcc_mxe_mingw64/wrappers:all",
        "@gcc_mxe_mingw64_files//:all",
    ],
)

[setup(
    name = device.name,
    architecture = device.architecture,
    artifact_naming = device.artifact_naming,
    compiler_components = ":compiler_components",
    constraints = device.constraints,
    feature_set = device.feature_set,
    include_directories = SYSTEM_INCLUDE_PATHS,
    params = {
        "compiler": "gcc",
    },
    substitutions = device.substitutions,
    tools = {
        "ar": "wrappers/ar",
        "cpp": "wrappers/cpp",
        "gcc": "wrappers/gcc",
        "gcov": "wrappers/gcov",
        "ld": "wrappers/ld",
        "nm": "wrappers/nm",
        "objcopy": "wrappers/objcopy",
        "objdump": "wrappers/objdump",
        "strip": "wrappers/strip",
    },
) for device in DEVICES]
